--- a/views/index.html
+++ b/views/index.html
@@ -1,103 +1,75 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Axios Requests example</title>
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css"
-    />
-  </head>
-  <body>
-    <div class="container my-3" style="max-width: 600px">
-      <h3>Axios Requests example</h3>
 
-      <div class="card mt-3">
-        <div class="card-header">Axios GET Request - BezKoder.com</div>
-        <div class="card-body">
-          <div class="input-group input-group-sm">
-            <button class="btn btn-sm btn-primary" onclick="getAllData()">Get All</button>
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Main</title>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto|Varela+Round">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" />
 
-            <input type="text" id="get-id" class="form-control ml-2" placeholder="Id">
-            <div class="input-group-append">
-              <button class="btn btn-sm btn-primary" onclick="getDataById()">Get by Id</button>
-            </div>
+</head>
 
-            <input type="text" id="get-title" class="form-control ml-2" placeholder="Title">
-            <div class="input-group-append">
-              <button class="btn btn-sm btn-primary" onclick="getDataByTitle()">Find By Title</button>
-            </div>
+<body>
 
-            <button class="btn btn-sm btn-warning ml-2" onclick="clearGetOutput()">Clear</button>
-          </div>   
-          
-          <div id="getResult"></div>
-        </div>
-      </div>
 
-      <div class="card mt-3">
-        <div class="card-header">Axios POST Request - BezKoder.com</div>
-        <div class="card-body">
-          <div class="form-group">
-            <input type="text" class="form-control" id="post-title" placeholder="Title">
-          </div>
-          <div class="form-group">
-            <input type="text" class="form-control" id="post-description" placeholder="Description">
-          </div>
-          <button class="btn btn-sm btn-primary" onclick="postData()">Post Data</button>
-          <button class="btn btn-sm btn-warning" onclick="clearPostOutput()">Clear</button>
+  <nav>
+    <a href="index.html" style="color: #fff">
+      <p class="h2">Інформаційно-комунікаційний хаб</p>
+    </a>
+    <ul>
+      <li>
+        <a href="forms.html">
+          <i class="bi bi-chat-left-text" aria-hidden="true" title="Зв'язок"></i>
+        </a>
+      </li>
+      <li>
+        <a href="gmail-api.html">
+          <i class="bi bi-envelope" aria-hidden="true" title="Надіслати листа"></i>
+        </a>
+      </li>
+      <li>
+        <a href="sheet-api.html">
+          <i class="bi bi-globe" aria-hidden="true" title="Моніторинг"></i>
+        </a>
+      </li>
+    </ul>
+  </nav>
 
-          <div id="postResult"></div>
-        </div>
-      </div>
 
-      <div class="card mt-3">
-        <div class="card-header">Axios PUT Request - BezKoder.com</div>
-        <div class="card-body">
-          <div class="form-group">
-            <input type="text" class="form-control" id="put-id" placeholder="Id">
-          </div>
-          <div class="form-group">
-            <input type="text" class="form-control" id="put-title" placeholder="Title">
-          </div>
-          <div class="form-group">
-            <input type="text" class="form-control" id="put-description" placeholder="Description">
-          </div>
-          <div class="form-check">
-            <input type="checkbox" class="form-check-input" id="put-published">
-            <label class="form-check-label" for="put-published">Publish</label>
-          </div>
-          <div class="form-group mt-2">
-            <button class="btn btn-sm btn-primary" onclick="putData()">Update Data</button>
-            <button class="btn btn-sm btn-warning" onclick="clearPutOutput()">Clear</button>
-          </div>
 
-          <div id="putResult"></div>
-        </div>
-      </div>
 
-      <div class="card mt-3">
-        <div class="card-header">Axios DELETE Request - BezKoder.com</div>
-        <div class="card-body">
-          <div class="input-group input-group-sm">
-            <button class="btn btn-sm btn-danger" onclick="deleteAllData()">Delete All</button>
+  <div class="text-center  align-self-center mb-4 mt-4 p-4">
+    <h3 class="h3">Вітаємо в інформаційно-комунікаційний хабі!</h3>
 
-            <input type="text" id="delete-id" class="form-control ml-2" placeholder="Id">
-            <div class="input-group-append">
-              <button class="btn btn-sm btn-danger" onclick="deleteDataById()">Delete by Id</button>
-            </div>
+  </div>
 
-            <button class="btn btn-sm btn-warning ml-2" onclick="clearDeleteOutput()">Clear</button>
-          </div>    
-          
-          <div id="deleteResult"></div>      
-        </div>
-      </div>
+
+
+  <footer class="bg-light footer text-lg-start">
+    <div class="p-3" style="
+            background: rgb(2, 0, 36);
+            background: linear-gradient(
+              90deg,
+              rgba(2, 0, 36, 1) 0%,
+              rgba(9, 9, 121, 1) 35%,
+              rgba(0, 212, 255, 1) 100%
+            );
+            color: #fff;
+          ">
+      © 2022 PZ-42
     </div>
+  </footer>
+  <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
-    <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+  <script src="index.js"></script>
+</body>
 
-    <script src="index.js"></script>
-  </body>
 </html>
