--- a/views/style.css
+++ b/views/style.css
@@ -1,4 +1,3 @@
-
 .delete {
   cursor: pointer;
   background: rgb(189, 28, 28);
@@ -8,15 +7,18 @@
   border-radius: 4px;
   float: right;
 }
+ 
 .accept {
   cursor: pointer;
   background: rgb(8, 184, 37);
   color: white;
-  border: 2px solid rgb(8, 184, 37);;
+  border: 2px solid rgb(8, 184, 37);
+  ;
   margin: 0 .5rem;
   border-radius: 4px;
   float: right;
 }
+ 
 .reject {
   cursor: pointer;
   background: rgb(189, 28, 28);
@@ -26,46 +28,59 @@
   border-radius: 4px;
   float: right;
 }
-
+ 
 [type="text"]:active,
 [type="text"]:focus {
   outline: 0;
   border: 2px solid #007bff;
 }
-
+ 
 ul {
   margin-top: 20px;
   padding: 0;
 }
-
-li {
+ 
+ 
+ 
+.btnDiv {
+  align-items: center;
+}
+ 
+nav {
   display: flex;
-  align-items: center;
-  padding: 1.5rem;
-  margin-bottom: 1rem;
-  background: #f4f4f4;
-  border-radius: 4px;
-  height: 45px;
+  color: #fff;
+  justify-content: space-between;
+  padding: 1rem 2rem;
+  background: rgb(2, 0, 36);
+  background: linear-gradient(90deg, rgba(2, 0, 36, 1) 0%, rgba(9, 9, 121, 1) 35%, rgba(0, 212, 255, 1) 100%);
+  margin-bottom: 1.5rem;
 }
-
-li span {
-  display: inline-block;
-  padding: .2rem;
-  width: 70%;
-  border-radius: 4px;
-  border: 2px solid transparent;
+ 
+nav ul {
+  display: flex;
+  list-style: none;
 }
-
-li span:hover {
-  background: rgba(179, 215, 255, 0.52);
+ 
+nav li {
+  padding-left: 2rem;
 }
-
-li span:focus {
-  outline: 0;
-  border: 2px solid #007bff;
-  background: rgba(179, 207, 255, 0.52)
+ 
+nav a {
+  text-decoration: none;
+  color: #0d47a1
 }
-
-.btnDiv{
-  align-items: center;
+ 
+@media only screen and (max-width: 600px) {
+  nav {
+    flex-direction: column;
+  }
+ 
+  nav ul {
+    flex-direction: column;
+    padding-top: 0.5rem;
+  }
+ 
+  nav li {
+    padding: 0.5rem 0;
+  }
 }
