--- a/views/style.css
+++ b/views/style.css
@@ -84,3 +84,35 @@ nav a {
     padding: 0.5rem 0;
   }
 }
+
+
+li span:focus {
+  outline: 0;
+  border: 2px solid #007bff;
+  background: rgba(179, 207, 255, 0.52);
+}
+
+.btnDiv{
+  align-items: center;
+}
+
+li span:hover {
+  background: rgba(179, 215, 255, 0.52);
+}
+
+li span {
+  display: inline-block;
+  padding: .2rem;
+  width: 70%;
+  border-radius: 4px;
+  border: 2px solid transparent;
+}
+
+li {
+  /* display: flex; */
+  padding: 1.5rem;
+  margin-bottom: 0.5rem;
+  /* background: #f4f4f4; */
+  border-radius: 4px;
+  height: 45px;
+}
