--- a/views/sheet-api.html
+++ b/views/sheet-api.html
@@ -76,7 +76,11 @@
           </button>
           <button id="acceptBtn" class="accept" style="float:center">
           <i class="material-icons" style="font-size:27px; vertical-align: middle;">&#xE147;</i>
-              <span>Прийняти</span>
+              <span>Показати для всіх</span>
+          </button>
+          <button id="acceptBtnFor" class="accept" style="float:center">
+          <i class="material-icons" style="font-size:27px; vertical-align: middle;">&#xE147;</i>
+              <span>Показати зареєстрованим</span>
           </button>
           </div>
     <div class="container my-3">
