--- a/views/index.html
+++ b/views/index.html
@@ -11,6 +11,7 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
+  <script tpe="module" src=""></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" />
@@ -48,6 +49,9 @@
 
   <div class="text-center  align-self-center mb-4 mt-4 p-4">
     <h3 class="h3">Вітаємо в інформаційно-комунікаційний хабі!</h3>
+    <br>
+    <h3 class="h3">Головні новини:</h3>
+    <div id="news_container"></div>
 
   </div>
 
