--- a/views/index.html
+++ b/views/index.html
@@ -11,14 +11,14 @@
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"></script>
-  <script tpe="module" src=""></script>
+  <script type="module" src="/business-logic/posts_realiz/postsList.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css" />
 
 </head>
 
-<body>
+<body onload="onLoad()">
 
 
   <nav>
@@ -74,6 +74,7 @@
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
   <script src="index.js"></script>
+  <script type="module" src="/business-logic/posts_realiz/postsList.js"></script>
 </body>
 
 </html>
